# second-brain-ai-assistant-course

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALL_AND_USAGE.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pr_online_pipeline_integration_001.notes.md  pr_online_pipeline_integration_002.notes.md  pyproject.toml  type.json
.github/workflows/: ci.yml  test.yml
apps/second-brain-offline/: .env.example  .python-version  Makefile  README.md  pyproject.toml
apps/second-brain-online/: .env.example  Makefile  README.md  pyproject.toml
apps/second-brain-online/configs/: compute_rag_vector_index_huggingface_contextual_simple.yaml  compute_rag_vector_index_openai_contextual.yaml  compute_rag_vector_index_openai_contextual_simple.yaml
apps/second-brain-online/src/second_brain_online/: config.py  opik_online_pipline_eval.py  opik_utils.py
apps/second-brain-online/src/second_brain_online/application/: __init__.py  evaluate.py
apps/second-brain-online/src/second_brain_online/application/agents/: __init__.py  agents.py  build.py
apps/second-brain-online/src/second_brain_online/application/agents/tools/: __init__.py  mongodb_retriever.py  mongodb_retriever_tool.py  summarizer.py  what_can_i_do.py
apps/second-brain-online/src/second_brain_online/application/evaluation/: __init__.py  evaluate.py  summary_density_heuristic.py  summary_density_judge.py
apps/second-brain-online/src/second_brain_online/application/rag/: __init__.py  embeddings.py  retrievers.py
apps/second-brain-online/tools/: app.py  evaluate_app.py
configs/: collect_notion.yaml  collect_notion_data.yaml  compute_rag_vector_index.yaml  etl.yaml  etl_precomputed.yaml
data/: sample_data_set.json
data/140bc009043f80e1b14bd568381b93a8/: 143bc009-043f-80d4-b148-e2540b0f8044.json  149bc009-043f-8046-921e-e5cdfab46bcc.json  149bc009-043f-8057-8289-d8b72104ca0b.json  150bc009-043f-8007-9135-eb4fcae37824.json  15abc009-043f-8036-9a05-f077fc8af449.json  176bc009-043f-80de-995f-d26071a771ce.json  3ff5d4c3-8bc3-482a-9d1d-89a9b8700890.json  47c2877e-a58f-4d16-90ed-0d225727967b.json  7925f45b-8301-4880-be94-5bfc11224b07.json
data/20438dae7f8842838593af3411754867/: 126bc009-043f-8038-b6e5-ee313ac258c2.json  130bc009-043f-8051-b22e-f1d28909aa45.json  15ebc009-043f-80c5-8984-d779ec4cd61b.json  174bc009-043f-80a3-b8b6-cd4f0d270840.json  17bbc009-043f-8088-9ec2-cfd850c37b9d.json  1d8057ea-6176-45cf-b9ae-718f1d8917f2.json  60c32208-f7fc-4057-a18a-5bebd96a3409.json  724e0e92-61ae-40e2-840c-0408d3bfb54a.json  783e06f4-37a1-43c1-b488-b6e710bd2a5f.json  8575cb97-5a70-44e8-9ca5-aacb34799521.json  966f59d7-ac1c-4889-aaf4-10fc000e3668.json  9bc0d732-671e-4a16-abfb-76cdb00a6deb.json  f8ad6f0c-15d1-4016-84bc-1265d3961410.json
data/31fcaab5a9404d41b922897d32b901b3/: 2966f73c-b59f-4861-ab4d-f1920f13f118.json  75a9d393-2224-4aa3-827f-cdc97012452d.json  e9c718af-1920-490b-b78b-bb0728f91136.json
data/6d8dd6ae29c442b1baea9c610dd1e92d/: 10fbc009-043f-8086-b674-db2ba5ddc4cc.json  135bc009-043f-80c8-a07f-d7a77b014a7d.json  135bc009-043f-80d6-9700-dd99a2c2a852.json  13cbc009-043f-80db-bbb1-d5f8af552860.json  14bbc009-043f-8095-a19c-cfeff61aeede.json  150bc009-043f-80ac-9e01-c4035990bd75.json  173bc009-043f-80d0-8c91-e4ab651d0698.json  64e35546-a9a1-4325-8d79-3ccc504ca2f6.json  715fa8ee-05e5-4896-a38a-0cf8e8e19b26.json  98e0f6e8-d75c-4821-98b1-aea420b992c6.json  a89dc319-8a39-4c87-8482-83413d356b04.json  de71d434-3e5a-4f07-a651-a793fc5ee79b.json  e41608fc-8ae9-4276-8f7d-440b72005d72.json  ea585fcf-a5db-47b1-b982-e65394f82eb7.json  fe4d8a21-2da4-4f02-a25a-89a2f804b9f1.json
data/7ec04ecd2d00406284674b1a614f1ec7/: 06e09786-f9c0-4cb4-8442-a196bfc31ea5.json  130bc009-043f-80e8-96f5-e7edee406c96.json  13ebc009-043f-80d6-a0e1-ff65cfbe2cf8.json  1499b6ba-bd86-4f77-9943-8bab80cbd4e1.json  151bc009-043f-8099-ae13-cbac1debc6d2.json  157bc009-043f-8066-aa43-cf5ce92a7a65.json  15bbc009-043f-8030-8f7d-e2686312c16c.json  15bbc009-043f-806b-983f-cfad5bc9f69d.json  160bc009-043f-806e-8b24-e0e137a2d1c7.json  163bc009-043f-8081-bf43-d7e11d59f25b.json  166bc009-043f-8005-9cfb-c2abedd04949.json  20eae26b-f10d-4cc3-830b-21ecafdd6248.json  2481cc7a-0643-4b84-aebb-95999eb77dff.json  279edd4e-8770-4a46-b1ad-014ee58c412b.json  6ed36b12-b7d1-4165-8083-365c02293278.json  706e28ed-dcf6-45ed-8c87-77dbc1929c0d.json  a208436f-7b2f-4184-a3ac-de76efee9708.json  b899f9c8-01f4-4d38-bc95-7b95d2596811.json  bb8330bb-5725-4ea1-9f3d-6c2ad561d670.json  bd9ef0f8-2613-4dac-bb89-d8d68b98464a.json  c40caec4-c214-4fdf-8d41-eb3fac026bc7.json  cf0ecfe2-0363-45b0-ad6f-a6e189233caa.json  da149294-cea6-43f8-a8c7-e991a628303f.json
data/be6505f5e7544b66a75fe0d444aba1b2/: 946c86ea-1d88-4d75-a955-04f427246a1a.json  b5ba2b6c-b8a5-4629-a867-8ad17018ad64.json  fc0c92e7-f7e1-42b2-bbf1-7d0e0e501eef.json
data/e9b2f80fb10e474ba95c7c219c9c6462/: 123bc009-043f-80fe-a381-d594ebb70ed9.json  12fbc009-043f-80a7-8b08-d31339b46545.json  16cbc009-043f-804a-b74f-cf7a54796a92.json  3fcc60e3-caf1-4546-8bf9-9959fef38482.json  67745483-a575-4ab5-afe4-7680bd974ab3.json  c3a73cde-19d7-4ab4-89aa-7dd0fe48ad86.json  f1a92fba-b123-4c95-a88d-9760bf0cce61.json
data/f54dbddcaa4c43c7ae17935716761536/: 173bc009-043f-8023-bbd1-cec98eeec055.json  (+3 more)
faiss/: langflow_index.faiss  langflow_index.pkl
pipelines/: __init__.py  collect_notion.py  collect_notion_data.py  compute_rag_vector_index.py  etl.py  generate_dataset.py  mongodb_atlas_pipeline.py
src/jokes/: jokes.py
src/second_brain_online/: ONLINE_README.md  main.py  opik_online_pipline_eval.py  pyproject.toml
steps/: __init__.py
tests/: test_download_raw_dataset.py  test_etl_pipeline.py  test_jokes.py  test_rag_vector_index_pipeline.py
tools/: aws_boto3_validator.py  rag.ipynb  run.py  use_s3.py
workshops/rag/template/: Makefile  README.md  generation_pipeline.ipynb  pyproject.toml
workshops/rag/template/src/rag_workshop/: agents.py  embeddings.py  generation.py  ingestion.py  mongodb.py  quality.py  retrievers.py  splitters.py
workshops/rag/template/tools/: agent_app.py  run_generation_pipeline.py
(+130 files in other folders)
