[project]
name = "second_brain_course"
version = "0.1.0"
description = "Self-paced course on production LLMs and RAG by teaching you how to build an AI assistant on top of your second brain."
readme = "README.md"
authors = [
    {name = "Paul Iusztin", email = "p.b.iusztin@gmail.com"},
    {name = "Jesse Moses", email = "jlmoses@outlook.com"},
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.3",
    "datasets>=2.14.4",
    "dnspython>=2.6.0,<3.0",
    "loguru>=0.7.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4.4.0",
    "zenml[server]>=0.72.0",
    "boto3>=1.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

[tool.ruff]
target-version = "py312"
line-length = 120
ignore = [
    "E501",  # Disable Ruff's line length checks
]