[project]
name = "rag-workshop"
version = "0.1.0"
description = "Workshop on building advanced RAG applications and systems."
readme = "README.md"
authors = [
    {name = "Paul Iusztin", email = "p.b.iusztin@gmail.com"},
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.3",
    "loguru>=0.7.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.7.0",
    "langchain>=0.3.14",
    "langchain-mongodb>=0.4.0",
    "langchain-openai>=0.3.0",
    "ipykernel>=6.29.5",
    "langchain-huggingface>=0.1.2",
    "gradio>=5.12.0",
    "smolagents>=1.4.1",
    "tqdm>=4.67.1",
    "litellm>=1.63.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.7.2",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_workshop"]

[tool.ruff]
target-version = "py312"
